Crash when left-clicking in the 3D viewport, Object Mode only. #104012

Closed
opened 2023-01-19 23:07:44 +01:00 by Thomas · 9 comments

System Information
Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits
Graphics card: Metal API AMD Radeon Pro 555X 1.2

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-19 00:14, hash: 83f9218801
Worked: (newest version of Blender that worked as expected)

Short description of error
Crash when selecting default cube with Metal.

Exact steps for others to reproduce the error
Open blender, select the default cube.
Does not crash when GPU back end is on OpenGL.

untitled.blend

Problem Report from MacOS.txt

system-info.txt

**System Information** Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits Graphics card: Metal API AMD Radeon Pro 555X 1.2 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-19 00:14, hash: `83f9218801` Worked: (newest version of Blender that worked as expected) **Short description of error** Crash when selecting default cube with Metal. **Exact steps for others to reproduce the error** Open blender, select the default cube. Does not crash when GPU back end is on OpenGL. [untitled.blend](https://archive.blender.org/developer/F14177296/untitled.blend) [Problem Report from MacOS.txt](https://archive.blender.org/developer/F14177295/Problem_Report_from_MacOS.txt) [system-info.txt](https://archive.blender.org/developer/F14177294/system-info.txt)
Author

Added subscriber: @Toba

Added subscriber: @Toba
Thomas changed title from Crash when selecting default cube with Metal to Crash when selecting default cube 2023-01-19 23:09:35 +01:00
Member
Added subscribers: @Michael-Parkin-White-Apple, @Jeroen-Bakker
Member

There are some fixes and improvements for intel/amd incoming. @Michael-Parkin-White-Apple is this a known issue at your end?

There are some fixes and improvements for intel/amd incoming. @Michael-Parkin-White-Apple is this a known issue at your end?
Michael Parkin-White self-assigned this 2023-01-20 10:00:12 +01:00

@Jeroen-Bakker This may get resolved by other fixes, however, I had not previously encountered this manifestation of the issue.
Will look into this.

@Jeroen-Bakker This may get resolved by other fixes, however, I had not previously encountered this manifestation of the issue. Will look into this.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

In #104012#1477064, @Jeroen-Bakker wrote:
There are some fixes and improvements for intel/amd incoming. @Michael-Parkin-White-Apple is this a known issue at your end?

In #104012#1477096, @Michael-Parkin-White-Apple wrote:
@Jeroen-Bakker This may get resolved by other fixes, however, I had not previously encountered this manifestation of the issue.
Will look into this.

This sounds like it can be confirmed?

> In #104012#1477064, @Jeroen-Bakker wrote: > There are some fixes and improvements for intel/amd incoming. @Michael-Parkin-White-Apple is this a known issue at your end? > In #104012#1477096, @Michael-Parkin-White-Apple wrote: > @Jeroen-Bakker This may get resolved by other fixes, however, I had not previously encountered this manifestation of the issue. > Will look into this. This sounds like it can be confirmed?
Philipp Oeser removed the
Interest
EEVEE & Viewport
label 2023-02-09 15:11:53 +01:00

I don't know if it's relevant to say it but the version: 3.5.0 BETA build date: 2023-02-22, 00:46:05 is still crashing when I select the default cube (or any other mesh).

I don't know if it's relevant to say it but the version: 3.5.0 BETA build date: 2023-02-22, 00:46:05 is still crashing when I select the default cube (or any other mesh).

I apologize but after further investigation 3.5.0 Beta, commit date: 2023-03-08 00:46, I would suggest to rename this issue as "Crash when left-clicking in the 3D viewport, Object Mode only."

(Since the project.blender migration, I have been unable to log in with my old "Toba" account, so I created a new one.)

I apologize but after further investigation 3.5.0 Beta, commit date: 2023-03-08 00:46, I would suggest to rename this issue as "Crash when left-clicking in the 3D viewport, Object Mode only." (Since the project.blender migration, I have been unable to log in with my old "Toba" account, so I created a new one.)
Jeroen Bakker changed title from Crash when selecting default cube to Crash when left-clicking in the 3D viewport, Object Mode only. 2023-03-09 08:17:04 +01:00
Jeroen Bakker added the
Interest
Metal
label 2023-03-09 08:17:10 +01:00
Jeroen Bakker added this to the EEVEE & Viewport project 2023-03-09 08:17:14 +01:00
Jeroen Bakker added this to the 3.5 milestone 2023-03-09 08:17:20 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-16 08:03:30 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104012
No description provided.